Access Display working fine

--- a/mcarbonPortal/src/app/account-management/account-management.component.html
+++ b/mcarbonPortal/src/app/account-management/account-management.component.html
@@ -40,7 +40,7 @@
                   (click)="createDialog()"
                   *ngIf="showCreateButton"
                 >
-                  <mat-icon>add</mat-icon>Create Account
+                  <mat-icon>add</mat-icon>Create
                 </button>
               </div>
               <div class="col-4 offset-2 align-self-center">
