--- a/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
+++ b/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="card card-1">
   <div class="card-header card-header-danger">
-    <h4 class="card-title">Create User</h4>
+    <h4 class="card-title">{{title}}</h4>
     <button mat-icon-button mat-dialog-close class="close-btn">
       <mat-icon aria-label="Close dialog">close</mat-icon>
     </button>
@@ -77,7 +77,7 @@
             </div>
           </div>
 
-          <div class="col-md-5 offset-md-1">
+          <div class="col-md-5">
             <div class="row">
               <div class="col-md-12 col-custom">
                 <mat-form-field>
@@ -105,6 +105,7 @@
 
             <div class="row justify-content-center align-items-center">
               <img
+                *ngIf="photoControl"
                 [src]="photoUrl"
                 style="border-radius: 50%"
                 alt="selected logo"
@@ -118,7 +119,6 @@
                 type="file"
                 accept="image/*"
                 (change)="onPhotoSelected($event)"
-                formControlName="logo"
               />
               <button class="btn btn-sm btn-photo" (click)="fileInput.click()">
                 Select a Logo
@@ -166,14 +166,35 @@
 
         <div class="row">
           <section class="example-section">
-            <mat-checkbox
-              *ngFor="let access of accessData"
-              [value]="access.accessId"
-              class="col-md-5 offset-md-1"
-              (change)="addAccessId(access, $event.checked)"
+            <div
+              *ngFor="let topAccess of topLevelAccess"
+              class="col-md-10 offset-md-1"
             >
-              {{ access.name }}
-            </mat-checkbox>
+              <mat-checkbox
+                [value]="topAccess.accessId"
+                (change)="toggleAccessId(topAccess, $event.checked)"
+              >
+                {{ topAccess.name }}
+              </mat-checkbox>
+              <div
+                class="row"
+                *ngIf="selectedAccessId.includes(topAccess.accessId)"
+              >
+                <div *ngFor="let access of accessData">
+                  <mat-checkbox
+                    class="col-md-5 offset-md-1"
+                    *ngIf="
+                      topAccess.accessId === access.pId && access.pId !== 0
+                    "
+                    [value]="access.accessId"
+                    (change)="toggleAccessId(access, $event.checked)"
+                    [checked]="false"
+                  >
+                    {{ access.name }}
+                  </mat-checkbox>
+                </div>
+              </div>
+            </div>
           </section>
         </div>
       </div>
