--- a/mcarbonPortal/src/app/view-account-dialog/view-account-dialog.component.html
+++ b/mcarbonPortal/src/app/view-account-dialog/view-account-dialog.component.html
@@ -27,7 +27,6 @@
                     type="text"
                     placeholder="Name"
                     formControlName="name"
-                    readonly
                   />
                 </mat-form-field>
               </div>
@@ -40,7 +39,6 @@
                     type="number"
                     placeholder="Max User"
                     formControlName="max_user"
-                    readonly
                   />
                 </mat-form-field>
               </div>
@@ -53,14 +51,11 @@
                     matInput
                     [matDatepicker]="picker"
                     formControlName="acc_exp_date"
-                    readonly
-                    disabled
                   />
                   <mat-hint>MM/DD/YYYY</mat-hint>
                   <mat-datepicker-toggle
                     matIconSuffix
                     [for]="picker"
-                    disabled
                   ></mat-datepicker-toggle>
                   <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
@@ -68,28 +63,17 @@
             </div>
           </div>
 
-          <div class="col-md-5">
-            <!-- <mat-form-field>
-                  <mat-label>Select a Logo</mat-label>
-                  <input
-                    type="file"
-                    (change)="onPhotoSelected($event)"
-                    accept="image/*"
-                    style="display: none"
-                  />
-                  <button mat-icon-button type="button" (click)="fileInput.click()">
-                    <mat-icon>photo_camera</mat-icon>
-                  </button>
-                  <mat-icon *ngIf="photoControl"
-                    >check_circle_outline</mat-icon
-                  >
-                </mat-form-field>
-                <img
-                  *ngIf="photoUrl"
-                  [src]="photoUrl"
-                  alt="Selected photo"
-                  style="border-radius: 50%; max-width: 200px; height: auto"
-                /> -->
+          <div class="col-md-5 offset-md-1">
+            <div class="row justify-content-center align-items-center">
+              <div class="col-md-12"><label>Logo Image</label></div>
+              <img
+                [src]="photoUrl"
+                class="logo"
+                alt="selected logo"
+                height="60%"
+                width="60%"
+              />
+            </div>
           </div>
         </div>
 
@@ -101,7 +85,6 @@
                 type="text"
                 placeholder="Address"
                 formControlName="address"
-                readonly
               />
             </mat-form-field>
           </div>
@@ -157,17 +140,38 @@
         </div>
 
         <div class="row">
-          <section class="example-section" *ngIf="accessData">
-            <ng-container *ngFor="let access of accessData">
-              <mat-checkbox
-                [value]="access.accessId"
-                class="col-md-5 offset-md-1"
-                [checked]="isCheckAccess(access)"
-                disabled
-              >
-                {{ access.name }}
-              </mat-checkbox></ng-container
+          <section class="example-section">
+            <div
+              *ngFor="let topAccess of topLevelAccess"
+              class="col-md-10 offset-md-1"
             >
+              <mat-checkbox
+                [value]="topAccess.accessId"
+                [checked]="isCheckAccess(topAccess)"
+                [disabled]="true"
+
+              >
+                {{ topAccess.name }}
+              </mat-checkbox>
+              <div
+                class="row"
+                *ngIf="selectedAccessId.includes(topAccess.accessId)"
+              >
+                <div *ngFor="let access of accessData">
+                  <mat-checkbox
+                    class="col-md-5 offset-md-1"
+                    *ngIf="
+                      topAccess.accessId === access.pId && access.pId !== 0
+                    "
+                    [value]="access.accessId"
+                    [checked]="isCheckAccess(access)"
+                    [disabled]="true"
+                  >
+                    {{ access.name }}
+                  </mat-checkbox>
+                </div>
+              </div>
+            </div>
           </section>
         </div>
       </div>
