--- a/mcarbonPortal/src/app/create-account/create-account.component.scss
+++ b/mcarbonPortal/src/app/create-account/create-account.component.scss
@@ -1,5 +1,5 @@
 .card-1 {
-  height: 80% !important;
+  min-height: 80% !important;
 }
 
 .card-header {
@@ -33,7 +33,8 @@
 }
 
 .btn-photo{
-  background-color:#009688;
+  background: linear-gradient(60deg, #009688, #17d1be);
+  color: white;
 }
 .btn-1 {
   background: linear-gradient(60deg, #009688, #17d1be);
@@ -60,9 +61,9 @@
   margin-left: auto;
   margin-right: auto;
 }
-mat-tab-group {
-  min-height: 350px;
-}
+// mat-tab-group {
+//   min-height: 350px;
+// }
 
 ::ng-deep .mat-checkbox-checked .mat-checkbox-background,
 ::ng-deep
