--- a/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.scss
+++ b/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.scss
@@ -32,6 +32,10 @@
   font-size: 1rem;
 }
 
+.btn-photo {
+  background: linear-gradient(60deg, #009688, #17d1be);
+  color: white;
+}
 .btn-1 {
   background: linear-gradient(60deg, #009688, #17d1be);
   color: white;
