--- a/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.html
+++ b/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="card card-1">
   <div class="card-header card-header-danger">
-    <h4 class="card-title">Edit User Details</h4>
+    <h4 class="card-title">{{title}}</h4>
     <button mat-icon-button mat-dialog-close class="close-btn">
       <mat-icon aria-label="Close dialog">close</mat-icon>
     </button>
@@ -17,77 +17,113 @@
       <div class="container">
         <div class="row">
           <div class="col-md-5 offset-md-1">
-            <mat-form-field>
-              <input
-                matInput
-                type="text"
-                placeholder="First Name"
-                formControlName="user_fname"
-              />
-            </mat-form-field>
+            <div class="row">
+              <div class="col-md-12 col-custom">
+                <mat-form-field>
+                  <input
+                    matInput
+                    type="text"
+                    placeholder="First Name"
+                    formControlName="user_fname"
+                  />
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 col-custom">
+                <mat-form-field>
+                  <input
+                    matInput
+                    type="tel"
+                    placeholder="Mobile Number"
+                    formControlName="mobile"
+                  />
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 col-custom">
+                <mat-form-field>
+                  <mat-label>Account Expiry Date</mat-label>
+                  <input
+                    matInput
+                    [matDatepicker]="picker"
+                    formControlName="acc_exp_date"
+                  />
+                  <mat-hint>MM/DD/YYYY</mat-hint>
+                  <mat-datepicker-toggle
+                    matIconSuffix
+                    [for]="picker"
+                  ></mat-datepicker-toggle>
+                  <mat-datepicker #picker></mat-datepicker>
+                  <mat-error
+                    *ngIf="userForm.hasError('mismatch', 'acc_exp_date')"
+                    >Select a valid date</mat-error
+                  >
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 col-custom">
+                <mat-form-field>
+                  <input
+                    matInput
+                    type="text"
+                    placeholder="Login ID"
+                    formControlName="login_id"
+                  />
+                </mat-form-field>
+              </div>
+            </div>
           </div>
+
           <div class="col-md-5">
-            <mat-form-field>
-              <input
-                matInput
-                type="text"
-                placeholder="Last Name"
-                formControlName="user_lname"
+            <div class="row">
+              <div class="col-md-12 col-custom">
+                <mat-form-field>
+                  <input
+                    matInput
+                    type="text"
+                    placeholder="Last Name"
+                    formControlName="user_lname"
+                  />
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 col-custom">
+                <mat-form-field>
+                  <input
+                    matInput
+                    type="email"
+                    placeholder="Email"
+                    formControlName="email"
+                  />
+                </mat-form-field>
+              </div>
+            </div>
+
+            <div class="row justify-content-center align-items-center">
+              <img
+                *ngIf="photoControl"
+                [src]="photoUrl"
+                style="border-radius: 50%"
+                alt="selected logo"
+                height="60%"
+                width="60%"
               />
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-5 offset-md-1">
-            <mat-form-field>
+            </div>
+            <div class="row justify-content-center align-items-center">
               <input
-                matInput
-                type="tel"
-                placeholder="Mobile Number"
-                formControlName="mobile"
+                #fileInput
+                type="file"
+                accept="image/*"
+                (change)="onPhotoSelected($event)"
               />
-            </mat-form-field>
-          </div>
-          <div class="col-md-5">
-            <mat-form-field>
-              <input
-                matInput
-                type="email"
-                placeholder="Email"
-                formControlName="email"
-              />
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-5 offset-md-1">
-            <mat-form-field>
-              <mat-label>Account Expiry Date</mat-label>
-              <input
-                matInput
-                [matDatepicker]="picker"
-                formControlName="acc_exp_date"
-              />
-              <mat-hint>MM/DD/YYYY</mat-hint>
-              <mat-datepicker-toggle
-                matIconSuffix
-                [for]="picker"
-              ></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-              <mat-error *ngIf="userForm.hasError('mismatch', 'acc_exp_date')"
-                >Select a valid date</mat-error
-              >
-            </mat-form-field>
-          </div>
-          <div class="col-md-5">
-            <mat-form-field >
-              <input
-                matInput
-                type="text"
-                placeholder="Login ID"
-                formControlName="login_id"
-              />
-            </mat-form-field>
+              <button class="btn btn-sm btn-photo" (click)="fileInput.click()">
+                Select a Logo
+              </button>
+            </div>
           </div>
         </div>
       </div>
@@ -130,16 +166,36 @@
 
         <div class="row">
           <section class="example-section">
-            <ng-container *ngFor="let access of accessData">
-              <mat-checkbox
-                [value]="access.accessId"
-                class="col-md-5 offset-md-1"
-                (change)="addAccessId(access, $event.checked)"
-                [checked]="isCheckAccess(access)"
-              >
-                {{ access.name }}
-              </mat-checkbox></ng-container
+            <div
+              *ngFor="let topAccess of topLevelAccess"
+              class="col-md-10 offset-md-1"
             >
+              <mat-checkbox
+                [value]="topAccess.accessId"
+                (change)="toggleAccessId(topAccess, $event.checked)"
+                [checked]="isCheckAccess(topAccess)"
+              >
+                {{ topAccess.name }}
+              </mat-checkbox>
+              <div
+                class="row"
+                *ngIf="selectedAccessId.includes(topAccess.accessId)"
+              >
+                <div *ngFor="let access of accessData">
+                  <mat-checkbox
+                    class="col-md-5 offset-md-1"
+                    *ngIf="
+                      topAccess.accessId === access.pId && access.pId !== 0
+                    "
+                    [value]="access.accessId"
+                    (change)="toggleAccessId(access, $event.checked)"
+                    [checked]="isCheckAccess(access)"
+                  >
+                    {{ access.name }}
+                  </mat-checkbox>
+                </div>
+              </div>
+            </div>
           </section>
         </div>
       </div>
@@ -229,7 +285,7 @@
               </div> -->
 
               <div
-                class="col-md-6 offset-md-1 "
+                class="col-md-6 offset-md-1"
                 *ngIf="
                   (selectedFeatures.includes(feature.featureId) ||
                     isCheckFeature(feature)) &&
