--- a/mcarbonPortal/src/app/user-management/user-management.component.html
+++ b/mcarbonPortal/src/app/user-management/user-management.component.html
@@ -12,7 +12,7 @@
                   (click)="createDialog()"
                   *ngIf="showCreateButton"
                 >
-                  <mat-icon>add</mat-icon>Create User
+                  <mat-icon>add</mat-icon>Create
                 </button>
               </div>
               <div class="col-4 offset-2 align-self-center">
@@ -44,14 +44,6 @@
                 [dataSource]="dataSourceWithPageSize"
                 #sort="matSort"
               >
-                <!-- <ng-container
-                  [matColumnDef]="column"
-                  *ngFor="let column of displayedColumns"
-                >
-                  <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-                  <td mat-cell *matCellDef="let user">{{ user[column] }}</td>
-                </ng-container> -->
-
                 <ng-container matColumnDef="userFname">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     First Name
@@ -65,13 +57,6 @@
                   </th>
                   <td mat-cell *matCellDef="let user">{{ user.lname }}</td>
                 </ng-container>
-
-                <!-- <ng-container matColumnDef="userFname">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    Name
-                  </th>
-                  <td mat-cell *matCellDef="let user">{{ user.userFname }} {{user.userLname}} </td>
-                </ng-container> -->
 
                 <ng-container matColumnDef="loginId">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
