--- a/mcarbonPortal/src/app/view-account-dialog/view-account-dialog.component.scss
+++ b/mcarbonPortal/src/app/view-account-dialog/view-account-dialog.component.scss
@@ -1,5 +1,9 @@
 .card-1 {
-  height: 400px !important;
+  min-height: 80% !important;
+}
+
+.logo {
+  border-radius: 50%;
 }
 
 .card-header {
@@ -58,9 +62,9 @@
   margin-left: auto;
   margin-right: auto;
 }
-mat-tab-group {
-  min-height: 350px;
-}
+// mat-tab-group {
+//   min-height: 350px;
+// }
 
 ::ng-deep .mat-checkbox-checked .mat-checkbox-background,
 ::ng-deep
@@ -110,10 +114,6 @@ button[type="button"] {
   border-radius: 50%;
 }
 
-img {
-  border-radius: 50%;
-}
-
 ::ng-deep .mat-datepicker-content {
   margin-top: 100px !important;
 }
@@ -136,4 +136,11 @@ img {
 .label {
   font-weight: bolder;
   font-size: 1rem;
+}
+
+.card-profile .card-avatar .logo{
+  min-width: 130px !important;
+  max-width: 130px !important;
+  min-height: 130px !important;
+  max-height: 130px !important;
 }
