--- a/mcarbonPortal/src/app/session-management/session-management.component.html
+++ b/mcarbonPortal/src/app/session-management/session-management.component.html
@@ -1,66 +1,6 @@
 <div class="main-content">
   <div class="container-fluid">
-    <!-- <div class="row row-1">
-      <div class="col-md-6 align-self-center">
-        <button
-          class="create-btn card-header-danger"
-          mat-raised-button
-          (click)="openDialog()"
-        >
-          <mat-icon>add</mat-icon>Create New Session
-        </button>
-      </div>
-      <div class="col-md-4 offset-md-2 align-self-center searchbar">
-        <form class="example-form">
-          <mat-form-field class="searchbar">
-            <span matPrefix> </span>
-            <input
-              type="tel"
-              matInput
-              placeholder="Search"
-              name="search"
-              [(ngModel)]="search"
-            />
-            <button matSuffix mat-button><mat-icon>search</mat-icon></button>
-          </mat-form-field>
-          <br />
-          {{ search }}
-        </form>
-      </div>
-    </div> -->
-
     <div class="row">
-      <!-- <div class="col-md-12">
-        <div class="card">
-          <div class="card-header card-header-danger">
-            <h4 class="card-title">User List</h4>
-            <p class="card-category">Details of all the admins and customers</p>
-          </div>
-          <div class="card-body">
-            <div class="table-responsive">
-              <table class="table">
-                <thead class="text-primary">
-                  <th>ID</th>
-                  <th>Name</th>
-                  <th>Country</th>
-                  <th>City</th>
-                  <th>Salary</th>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>1</td>
-                    <td>Dakota Rice</td>
-                    <td>Niger</td>
-                    <td>Oud-Turnhout</td>
-                    <td class="text-primary">$36,738</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
       <div class="col-md-12">
         <div class="card">
           <div class="card-header card-header-danger">
@@ -71,7 +11,7 @@
                   mat-raised-button
                   (click)="openDialog()"
                 >
-                  <mat-icon>add</mat-icon>Create New Session
+                  <mat-icon>add</mat-icon>Create
                 </button>
               </div>
 
@@ -95,6 +35,7 @@
             <!-- <h4 class="card-title">Session List</h4>
             <p class="card-category">Details of all the sessions</p> -->
           </div>
+
           <div class="card-body">
             <div class="table-responsive">
               <table
@@ -102,20 +43,167 @@
                 mat-table
                 matSort
                 [dataSource]="dataSourceWithPageSize"
+                #sort="matSort"
               >
-                <ng-container
-                  [matColumnDef]="column"
-                  *ngFor="let column of displayedColumns"
-                >
-                  <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-                  <td mat-cell *matCellDef="let user">{{ user[column] }}</td>
+                <ng-container matColumnDef="sessionName">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Session Name
+                  </th>
+                  <td mat-cell *matCellDef="let session">
+                    {{ session.sessionName }}
+                  </td>
                 </ng-container>
 
+                <ng-container matColumnDef="participantName">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Participant Name
+                  </th>
+                  <td mat-cell *matCellDef="let session">
+                    {{ session.participantName }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="userMaxSessions">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    User Max Sessions
+                  </th>
+                  <td mat-cell *matCellDef="let session">
+                    {{ session.userMaxSessions }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="accountMaxSessions">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Account Max Sessions
+                  </th>
+                  <td mat-cell *matCellDef="let session">
+                    {{ session.accountMaxSessions }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="totalParticipants">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Total Participant
+                  </th>
+                  <td mat-cell *matCellDef="let session">
+                    {{ session.totalParticipants }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="creationDate">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Creation Date
+                  </th>
+                  <td mat-cell *matCellDef="let session">
+                    {{ session.creationDate }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="expDate">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Expiry Date
+                  </th>
+                  <td mat-cell *matCellDef="let session">
+                    {{ session.expDate }}
+                  </td>
+                </ng-container>
+                <ng-container matColumnDef="status">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Status
+                  </th>
+                  <td mat-cell *matCellDef="let session">
+                    <ng-container [ngSwitch]="session.status">
+                      <button class="btn btn-danger btn-sm" *ngSwitchCase="0">
+                        Deactive
+                      </button>
+                      <button class="btn btn-success btn-sm" *ngSwitchCase="1">
+                        Active
+                      </button>
+                      <button class="btn btn-dark btn-sm" *ngSwitchCase="2">
+                        Deleted
+                      </button>
+                      <button
+                        class="btn btn-secondary btn-sm"
+                        *ngSwitchCase="3"
+                      >
+                        Expired
+                      </button>
+                    </ng-container>
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Action">
+                  <th
+                    class="header name-column"
+                    mat-header-cell
+                    *matHeaderCellDef
+                  >
+                    <span>Action</span>
+                  </th>
+                  <td mat-cell *matCellDef="let user">
+                    <button
+                      mat-icon-button
+                      [matMenuTriggerFor]="menu"
+                      aria-label="Example icon-button with a menu"
+                    >
+                      <mat-icon>more_vert</mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu" xPosition="before">
+                      <button
+                        class="btn-action"
+                        mat-menu-item
+                        (click)="viewUserDialog(user)"
+                      >
+                        <mat-icon style="color: #009688"
+                          >remove_red_eye</mat-icon
+                        >
+                        <span>View</span>
+                      </button>
+                      <button
+                        class="btn-action"
+                        mat-menu-item
+                        (click)="updateUserDialog(user)"
+                        *ngIf="showEdit"
+                      >
+                        <mat-icon style="color: #009688">edit</mat-icon>
+                        <span>Edit</span>
+                      </button>
+                      <button
+                        class="btn-action"
+                        mat-menu-item
+                        (click)="deleteUser(user.userId)"
+                        *ngIf="showDelete"
+                      >
+                        <mat-icon style="color: #009688"
+                          >delete_outline</mat-icon
+                        >
+                        <span>Delete</span>
+                      </button>
+                      <button
+                        class="btn-action"
+                        mat-menu-item
+                        (click)="expireData()"
+                      >
+                        <mat-icon style="color: #009688"
+                          >power_settings_new</mat-icon
+                        >
+                        <span>Expire</span>
+                      </button>
+                    </mat-menu>
+                  </td>
+                </ng-container>
+
+                <!-- Render Column Name -->
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let user; columns: displayedColumns">
-                  {{
-                    user[columns]
-                  }}
+                <tr
+                  mat-row
+                  *matRowDef="let session; columns: displayedColumns"
+                ></tr>
+
+                <tr class="mat-row" *matNoDataRow>
+                  <td class="mat-cell" colspan="10">
+                    No data matching the filter "{{ input.value }}"
+                  </td>
                 </tr>
               </table>
               <mat-paginator
@@ -123,53 +211,10 @@
                 [pageSizeOptions]="pageSizes"
                 showFirstLastButtons
               ></mat-paginator>
-              <!-- <mat-sort #sort (matSortChange)="dataSourceWithPageSize.sort = sort">
-                <ng-container *ngFor="let column of displayedColumns">
-                  <mat-sort-header
-                    [matSortHeaderDisableClear]="true"
-                    [direction]="dataSourceWithPageSize.sort?.direction"
-                    [active]="column === dataSourceWithPageSize.sort?.active"
-                    >{{ column | titlecase }}</mat-sort-header
-                  >
-                </ng-container>
-              </mat-sort> -->
             </div>
           </div>
         </div>
       </div>
-
-      <!-- <div class="col-md-12">
-        <table mat-table [dataSource]="dataSource" matSort>
-          <ng-container
-            *ngFor="let column of displayedColumns"
-            [matColumnDef]="column"
-          >
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-              {{ column | titlecase }}
-            </th>
-            <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-
-        <mat-paginator
-          #paginator
-          [pageSizeOptions]="[5, 10, 20]"
-          showFirstLastButtons
-        ></mat-paginator>
-        <mat-sort #sort (matSortChange)="dataSource.sort = sort">
-          <ng-container *ngFor="let column of displayedColumns">
-            <mat-sort-header
-              [matSortHeaderDisableClear]="true"
-              [direction]="dataSource.sort?.direction"
-              [active]="column === dataSource.sort?.active"
-              >{{ column | titlecase }}</mat-sort-header
-            >
-          </ng-container>
-        </mat-sort>
-      </div> -->
     </div>
   </div>
 </div>
