--- a/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.scss
+++ b/mcarbonPortal/src/app/update-user-dialog/update-user-dialog.component.scss
@@ -1,6 +1,11 @@
 .card-1 {
-    height: 80% !important;
-  }
+  box-shadow: none;
+  margin-bottom: 0px;
+}
+
+::ng-deep .mat-dialog-container {
+  height: auto !important;
+}
   
   .card-header {
     margin-bottom: 10px;
