--- a/mcarbonPortal/src/app/session-management/session-management.component.scss
+++ b/mcarbonPortal/src/app/session-management/session-management.component.scss
@@ -69,6 +69,10 @@ th {
   background: transparent;
 }
 
+input {
+  color: #009688;
+}
+
 .box a .material-icons {
   color: #009688;
   font-size: 18px;
